<resources>
    <string name="app_name">wallet</string>
    <string name="welcome_back">Welcome Back！</string>
    <string name="password">Password</string>
    <string name="unlock">Unlock</string>
    <string name="reset_wallet">Reset Wallet</string>
    <string name="import_or_create_a_wallet">Import or\nCreate a wallet</string>
    <string name="import_an_existing">Import an existing wallet or\ncreate a new one</string>
    <string name="import_text">Import</string>
    <string name="create">Create</string>
    <string name="import_a_wallet">Import a Wallet</string>
    <string name="enter_your_secret">Enter your Secret Recovery Phrase</string>
    <string name="set_wallet_name">Set wallet name</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="set_password">Set Password</string>
    <string name="password_is_not_less_than_8digits">Password is not less than 8digits</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="index_1">1</string>
    <string name="index_2">2</string>
    <string name="index_3">3</string>
    <string name="secure_wallet">Secure wallet</string>
    <string name="confirm">Confirm</string>
    <string name="i_have_carefully_and_afree_with">I have carefully and afree with <font color='#007DFF'>User Agreement</font></string>
    <string name="secure_wallet_hint_title">These secret recovery phrase are for recovering your wallet, write down it correctly on paper and keep it in a safe place</string>
    <string name="secure_wallet_alert">Dont’t desclose secret recovery phrase to anyone Once the secret recovery phrase is lost, assets canot be reccovered</string>
    <string name="custom_networks">Custom Networks</string>
    <string name="network_name">Network Name</string>
    <string name="network_name_optiona">Network Name（optiona）</string>
    <string name="rpc_url">RPC Url</string>
    <string name="chain_id">Chain ID</string>
    <string name="symbol">Symbol</string>
    <string name="block_explorer_url">Block Explorer URL</string>
    <string name="add">Add</string>
    <string name="block_explore_url_optional">Block Explore URL（optional）</string>
    <string name="yns_wallet">YNS Wallet</string>
    <string name="yns">YNS</string>
    <string name="details">Details</string>
    <string name="doller_0_00">$ 0.00</string>
    <string name="receive">Receive</string>
    <string name="super_loop">Super Loop</string>
    <string name="assets">Assets</string>
    <string name="ethereum_mainnet">Ethereum Mainnet</string>
    <string name="me">Me</string>
    <string name="test_mine_string">037hd75jdr83hfnlksowu5fddhu43ew82737edhfvjskfjhgi99</string>
    <string name="transaction_records">Transaction Records</string>
    <string name="share_my_address">Share my address</string>
    <string name="language">Language</string>
    <string name="user_agreement">User Agreement</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="english">English</string>
    <string name="test_string_eth">ETH</string>
    <string name="no_wallet">No Wallet</string>
    <string name="go_to_create_wallet">Go to create wallet</string>
    <string name="wallet_details">Wallet Details</string>
    <string name="network_name_optional">Network Name(optional)</string>
    <string name="export_private_key">Export Private Key</string>
    <string name="modify_password">Modify Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="modify_walletname">Modify WalletName</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="resetting_the_password_will_reset">Resetting the password will reset the wallet, and accounts previously imported through the private key will be deleted</string>
    <string name="next">next</string>
    <string name="wallet_step_hint_title">Please write down the following words in the correct order.</string>
    <string name="wallet_step_hint_bottom">Anyone with your private key can access all your assets. Please keep the information to yourself.</string>
    <string name="wallet_step2_2_hint_title">These secret recovery phrase are for recovering your wallet, write down it correctly on paper and keep it in a safe place</string>
    <string name="mnemonic_qr_code">Mnemonic QR Code</string>
    <string name="keep_mnemonic_safe">Keep Mnemonic safe</string>
    <string name="keep_content">任何人获取你私钥，意味着获取了资产的所有权，请妥善保管</string>
    <string name="keep_content2">YNS 不会保持您的私钥，所以一旦丢失，将不能恢复</string>
    <string name="already_back_up">Already Back Up</string>
    <string name="view_mnemonic">View Mnemonic</string>
    <string name="choose_index_1">选择第1个单词</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="accounts_to_be_imported">Accounts to be imported</string>
    <string name="choose_another_account">choose another account</string>
    <string name="tabbgfncgyhjvprxg1wp57va5wae6chrwc">TAbBgFNCgYHJvPRxG1wp57Va5Wae6chRwc</string>
    <string name="balance_0_trx">Balance：0 TRX</string>
    <string name="path_m_dhdj_345_1">Path:m/dhdj/345/1</string>
    <string name="change_hd_wallet">Change HD Wallet</string>
    <string name="hi_welcome_to_yns_wallet">Hi～\nWelcome to YNS Wallet!</string>
    <string name="generate_wallet">Generate Wallet</string>
    <string name="generate_wallet_content">Generate a related wallet based on your HD wallet</string>
    <string name="import_your_mnemonic_private_key_or_keystore_with_one_tap">Import your mnemonic, private key, or keystore with one tap</string>
    <string name="change_password">change password</string>
    <string name="wallet_management">Wallet Management</string>
    <string name="back_up_private_key">Back Up Private Key</string>
    <string name="back_up_mnemonic">Back Up Mnemonic</string>
    <string name="check_back_up_record">Check Back Up Record</string>
    <string name="old_password">Old Password</string>
    <string name="copy_address">Copy Address</string>
    <string name="send">Send</string>
    <string name="swap">Swap</string>
    <string name="to">To</string>
    <string name="enter_or_paste_the_address">Enter or paste the address</string>
    <string name="max">Max</string>
    <string name="from">From</string>
    <string name="enter_an_amount">Enter an amount</string>
    <string name="view_token_info">View Token Info</string>
    <string name="yns_trx">YNS / TRX</string>
    <string name="instant_swap">Instant Swap</string>
    <string name="records">Records</string>
    <string name="choose_tokens">Choose Tokens</string>
    <string name="service_email">Service Email</string>

</resources>