<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yns.wallet.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/custom_networks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/network_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <EditText
        android:id="@+id/et_name"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/network_name_optiona"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_title" />

    <TextView
        android:id="@+id/tv_rpc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/rpc_url"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_rpc"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/network_name_optiona"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rpc_title" />

    <TextView
        android:id="@+id/tv_chain_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/chain_id"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_rpc" />

    <EditText
        android:id="@+id/et_chain"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/chain_id"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chain_title" />

    <TextView
        android:id="@+id/tv_symbol_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/symbol"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_chain" />

    <EditText
        android:id="@+id/et_symbol"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/chain_id"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_symbol_title" />


    <TextView
        android:id="@+id/tv_block_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/block_explorer_url"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_chain" />

    <EditText
        android:id="@+id/et_block"
        style="@style/import_edit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_import_bg"
        android:hint="@string/block_explore_url_optional"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_symbol_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_bg_btn"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_block" />

</androidx.constraintlayout.widget.ConstraintLayout>