<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.yns.wallet.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/wallet_details" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_round_color_bg">

        <TextView
            android:id="@+id/iv_mine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="8dp"
            android:text="@string/chain_id"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:drawableEndCompat="@mipmap/icon_edit" />

        <TextView
            android:id="@+id/iv_mine_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_mine_name"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:ellipsize="middle"
            android:maxEms="20"
            android:singleLine="true"
            android:text="@string/test_mine_string"
            android:textColor="#8775AE"
            android:textSize="13sp"
            app:drawableEndCompat="@mipmap/icon_copy" />

        <TextView
            android:id="@+id/iv_mine_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_mine_hash"
            android:layout_marginStart="21dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_trans_bg"
            android:drawablePadding="9dp"
            android:ellipsize="middle"
            android:maxEms="20"
            android:paddingStart="6dp"
            android:paddingTop="2dp"
            android:paddingEnd="6dp"
            android:paddingBottom="2dp"
            android:singleLine="true"
            android:text="@string/path_m_dhdj_345_1"
            android:textColor="#8775AE"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/iv_change_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_mine_hash"
            android:layout_alignTop="@id/iv_mine_path"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_trans_bg"
            android:drawableStart="@mipmap/icon_edit"
            android:drawablePadding="6dp"
            android:paddingStart="6dp"
            android:paddingTop="2dp"
            android:paddingEnd="6dp"
            android:paddingBottom="2dp"
            android:text="@string/change_password"
            android:textColor="#8775AE"
            android:textSize="13sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/wallet_management"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_text_arc_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_private_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/icon_key"
                android:drawablePadding="8dp"
                android:gravity="center_horizontal"
                android:text="@string/back_up_private_key"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6229FF" />

            <TextView
                android:id="@+id/tv_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/icon_user_agreement_edit"
                android:drawablePadding="8dp"
                android:gravity="center_horizontal"
                android:text="@string/back_up_mnemonic"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableRight="@mipmap/icon_arrow_detail"
            android:text="@string/check_back_up_record"
            android:textColor="#6229FF"
            android:textSize="10sp" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_reset_wallet"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_detail_btn_bg"
        android:gravity="center"
        android:text="@string/reset_wallet"
        android:textColor="#FEAE2D"
        android:textSize="16sp" />

</LinearLayout>