<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main" />

    <com.yns.wallet.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/wallet_details" />

    <TextView
        android:id="@+id/iv_mine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/test_mine_string"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19dp"
        android:background="@drawable/shape_round_white_bg"
        android:padding="10dp"
        android:src="#DFDFDF" />

    <TextView
        android:id="@+id/tv_super_loop"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_bg_btn"
        android:gravity="center"
        android:text="@string/copy_address"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="74dp"
        android:drawableTop="@mipmap/logo"
        android:text="@string/yns_wallet"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>