<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main" />

    <com.yns.wallet.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/wallet_details" />

    <ImageView
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:background="@drawable/shape_color_border_round"
        android:paddingStart="21dp"
        android:paddingTop="28dp"
        android:paddingEnd="21dp"
        android:paddingBottom="28dp"
        android:src="@mipmap/logo_white_small"
        android:text="@string/yns_wallet"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:src="@mipmap/icon_email" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:text="@string/service_email"
            android:src="@mipmap/icon_email" />
    </RelativeLayout>

</LinearLayout>